<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/newGameFragment">

    <fragment
        android:id="@+id/newGameFragment"
        android:name="mytest.tictactoe.ui.newgame.NewGameFragment"
        android:label="@string/New_game"
        tools:layout="@layout/fragment_new_game" >
        <action
            android:id="@+id/action_newGameFragment_to_inGameFragment"
            app:destination="@id/inGameFragment" />
    </fragment>

    <fragment
        android:id="@+id/inGameFragment"
        android:name="mytest.tictactoe.ui.ingame.InGameFragment"
        android:label="@string/In_game"
        tools:layout="@layout/fragment_in_game" >
        <argument
            android:name="gameId"
            app:argType="long"/>
        <argument
            android:name="playerx"
            app:argType="string"/>
        <argument
            android:name="playero"
            app:argType="string"/>
    </fragment>
</navigation>